--- a/.github/workflows/Collect.yaml
+++ b/.github/workflows/Collect.yaml
@@ -53,7 +53,7 @@ jobs:
               }
               $settingsFile = Join-Path $settings.baseFolder "deploy.json"
               $settings | ConvertTo-Json | Set-Content $settingsFile -Encoding UTF8
-              . ".\Internal\Collect.ps1" -configName $settingsFile -githubOwner $githubOwner -token $token -github -directCOMMIT:('${{ github.event.inputs.directCOMMIT }}' -eq 'Y')
+              . ".\Internal\Collect.ps1" -configName $settingsFile -githubOwner $githubOwner -token $token -directCOMMIT:('${{ github.event.inputs.directCOMMIT }}' -eq 'Y')
             }
           }
           catch {
