--- a/Actions/ReadSecrets/action.yaml
+++ b/Actions/ReadSecrets/action.yaml
@@ -12,6 +12,10 @@ inputs:
   getSecrets:
     description: Comma separated list of Secrets to get
     required: true
+  getAppDependencyProbingPathsSecrets:
+    description: Specify whether or not the function should also get AuthToken secrets from AppDependencyProbingPaths
+    required: false
+    default: 'N'
   parentTelemetryScopeJson:
     description: Specifies the parent telemetry scope for the telemetry signal
     required: false
@@ -23,8 +27,9 @@ runs:
       shell: ${{ inputs.shell }}
       env:
         _getSecrets: ${{ inputs.getSecrets }}
+        _getAppDependencyProbingPathsSecrets: ${{ inputs.getAppDependencyProbingPathsSecrets }}
         _parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
-      run: try { ${{ github.action_path }}/ReadSecrets.ps1 -gitHubSecrets '${{ inputs.gitHubSecrets }}' -getSecrets $ENV:_getSecrets -parentTelemetryScopeJson $ENV:_parentTelemetryScopeJson } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("`r",'').Replace("`n",' ')))"; exit 1 }
+      run: try { ${{ github.action_path }}/ReadSecrets.ps1 -gitHubSecrets '${{ inputs.gitHubSecrets }}' -getSecrets $ENV:_getSecrets -getAppDependencyProbingPathsSecrets ($ENV:_getAppDependencyProbingPathsSecrets -eq 'Y') -parentTelemetryScopeJson $ENV:_parentTelemetryScopeJson } catch { Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("`r",'').Replace("`n",' ')))"; exit 1 }
 branding:
   icon: terminal
   color: blue
