Secretless PR Builds (#641)
This PR will add the ability to have trigger PRs with the pull_request
trigger. Having PR builds triggered from the pull_request trigger means
that builds triggered from forks won't have access to secrets.


- [x] Release notes 
- [x] Testing 


PR triggered with "pull_request" from branch:
https://github.com/aholstrup1/ALAppExtensions/actions/runs/5750014584
PR triggered with "pull_request" from fork:
https://github.com/aholstrup1/ALAppExtensions/actions/runs/5750987725/job/15588856379

---------

Co-authored-by: Maria Zhelezova <43066499+mazhelez@users.noreply.github.com>

--- a/Templates/AppSource App/.github/workflows/_BuildALGoProject.yaml
+++ b/Templates/AppSource App/.github/workflows/_BuildALGoProject.yaml
@@ -86,6 +86,7 @@ jobs:
             get: useCompilerFolder,keyVaultCodesignCertificateName,doNotSignApps
 
         - name: Read secrets
+          if: github.event_name != 'pull_request'
           uses: microsoft/AL-Go-Actions/ReadSecrets@main
           env:
             secrets: ${{ toJson(secrets) }}
