--- a/Actions/Sign/action.yaml
+++ b/Actions/Sign/action.yaml
@@ -36,6 +36,7 @@ runs:
         _parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
       id: Sign
       run: |
+        $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try { 
           ${{ github.action_path }}/Sign.ps1 -AzureCredentialsJson $ENV:_azureCredentialsJson `
                                       -TimestampService $ENV:_timestampService `
@@ -43,10 +44,11 @@ runs:
                                       -FileDigest $ENV:_digestAlgorithm `
                                       -PathToFiles $ENV:_pathToFiles `
                                       -ParentTelemetryScopeJson $ENV:_parentTelemetryScopeJson
-        } catch { 
-          Write-Host "::Error::Unexpected error when running action ($($_.Exception.Message.Replace("`r",'').Replace("`n",' ')))"; exit 1 
         }
-
+        catch {
+          Write-Host "::ERROR::Unexpected error when running action. Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' '))), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
+          exit 1
+        }
 branding:
   icon: terminal
   color: blue
