'Collect changes from andersgMSFT/*@PPPreview'

--- a/Templates/Per Tenant Extension/.github/AL-Go-Settings.json
+++ b/Templates/Per Tenant Extension/.github/AL-Go-Settings.json
@@ -1,4 +1,26 @@
 {
   "type": "PTE",
-  "templateUrl": "https://github.com/microsoft/AL-Go-PTE@main"
+  "templateUrl": "https://github.com/microsoft/AL-Go-PTE@main",
+  "powerPlatformSolutionFolder": "TestSolution",
+  "environments": [
+    "Dev (Production)",
+    "UX (Production)",
+    "Staging"
+  ],
+  "DeployToDev": {
+    "environmentName": "PowerApps",
+    "companyId": "dc50d5e8-f9c9-ed11-94cc-000d3a220b2f",
+    "ppEnvironmentUrl": "https://orgc791aad2.crm.dynamics.com/"
+  },
+  "DeployToUX": {
+    "environmentName": "production",
+    "companyId": "14bce256-55e9-ed11-8850-6045bde98bba",
+    "ppEnvironmentUrl": "https://org46f025ef.crm.dynamics.com/"
+  },
+  "DeployToStaging": {
+    "environmentName": "staging",
+    "companyId": "14bce256-55e9-ed11-8850-6045bde98bba",
+    "ppEnvironmentUrl": "https://org36168d50.crm.dynamics.com/",
+    "Branches": [ "PPPreview", "main" ]
+  }
 }
